--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
 html, body{
     height: 100%;
     background: #dddddd;
+    min-height: 600px;
+    min-width: 800px;
 }
 
 h2 {
@@ -21,7 +23,7 @@ textarea {
 
 button{
     width: 100%; 
-    height: 45px;
+    height: 50px;
 }
 
 form {
@@ -43,7 +45,6 @@ form {
   display: flex;
   font-family: monospace;
   height: 100%;
-  border: 1px solid #ccc;
   overflow: hidden;
 }
 
