--- a/templates/index.html
+++ b/templates/index.html
@@ -101,11 +101,11 @@
                 <div class="tab-content" id="outputTabsContent" style="flex: 1;">
                     <div class="tab-pane fade show active" id="post-output" role="tabpanel" style="height: 100%; margin-bottom: 10px; overflow-y:auto;">
                         <textarea type="text" id="outputs" name="outputs" placeholder="Outputs" readonly
-                            style="width:100%; height:100%; resize: none; margin-bottom: 10px;"></textarea>
+                            style="width:100%; height:100%; resize: none;"></textarea>
                     </div>
                     <div class="tab-pane fade" id="plant-output" role="tabpanel" style="height: 100%; margin-bottom: 10px; overflow-y:auto;">
                         <textarea type="text" id="plant_outputs" name="plant_outputs" placeholder="Plant Outputs" readonly
-                            style="width:100%; height:100%; resize: none; margin-bottom: 10px;"></textarea>
+                            style="width:100%; height:100%; resize: none;"></textarea>
                     </div>
                 </div>
             </div>
