--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div>session_id: {{session}}</div>
     <form method="POST" action="/" enctype="multipart/form-data" style="height: 90vh;">
         <div class="row" style="height: 60vh; margin-bottom: 1%; min-height: 200px; overflow-y:auto;">
-            <div class="col-6" style="display: flex; flex-direction: column; height: 60vh; overflow: hidden;">
+            <div class="col-6" style="display: flex; flex-direction: column; height: 60vh; overflow: hidden; min-height: 200px">
               <ul class="nav nav-tabs" id="textTabs" role="tablist">
                 <li class="nav-item"><a class="nav-link active" id="post-tab" data-toggle="tab" href="#post" role="tab">Controller poST Code</a></li>
                 <li class="nav-item"><a class="nav-link" id="plant-post-tab" data-toggle="tab" href="#plant-post" role="tab">Plant poST Code</a></li>
@@ -99,13 +99,11 @@
                     <li class="nav-item"><a class="nav-link" id="plant-output-tab" data-toggle="tab" href="#plant-output" role="tab">Plant Outputs</a></li>
                 </ul>
                 <div class="tab-content" id="outputTabsContent" style="flex: 1;">
-                    <div class="tab-pane fade show active" id="post-output" role="tabpanel" style="height: 100%; margin-bottom: 10px; overflow-y:auto;">
-                        <textarea type="text" id="outputs" name="outputs" placeholder="Outputs" readonly
-                            style="width:100%; height:100%; resize: none;"></textarea>
+                    <div class="tab-pane fade show active" id="post-output" role="tabpanel" style="height: 100%; margin-bottom: 10px;">
+                        <textarea type="text" id="outputs" name="outputs" placeholder="Outputs" readonly="" style="width:100%; height:100%; resize: none;"></textarea>
                     </div>
                     <div class="tab-pane fade" id="plant-output" role="tabpanel" style="height: 100%; margin-bottom: 10px; overflow-y:auto;">
-                        <textarea type="text" id="plant_outputs" name="plant_outputs" placeholder="Plant Outputs" readonly
-                            style="width:100%; height:100%; resize: none;"></textarea>
+                        <textarea type="text" id="plant_outputs" name="plant_outputs" placeholder="Plant Outputs" readonly="" style="width:100%; height:100%; resize: none;"></textarea>
                     </div>
                 </div>
             </div>
