--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <body>
     <div>session_id: {{session}}</div>
     <form method="POST" action="/" enctype="multipart/form-data" style="height: 90vh;">
-        <div class="row" style="height: 60vh; margin-bottom: 1%; min-height: 200px; overflow-y:auto;">
+        <div class="row" style="height: 60vh; margin-bottom: 1%; min-height: 200px;">
             <div class="col-6" style="display: flex; flex-direction: column; height: 60vh; overflow: hidden; min-height: 200px">
               <ul class="nav nav-tabs" id="textTabs" role="tablist">
                 <li class="nav-item"><a class="nav-link active" id="post-tab" data-toggle="tab" href="#post" role="tab">Controller poST Code</a></li>
